--- a/css/styles.css
+++ b/css/styles.css
@@ -60,10 +60,11 @@ img {
 }
 
 /* ------Page header------- */
+
 .page-header {
   display: flex;
-  position: fixed;
-  width: 100%;
+  
+  height: 80px;
   margin-top: 0;
 
   background-color: #ffffff;
@@ -71,7 +72,6 @@ img {
 }
 
 .main-nav {
-  
   display: flex;
   align-items: center;
 }
@@ -94,23 +94,26 @@ img {
   color: var(--white-color);
 }
 
+/*----------------Nav-----------*/
+
 .site-nav {
+  position: relative;
   display: flex;
   margin-left: 93px;
   margin-top: 0;
   margin-bottom: 0;
   padding: 0;
 }
-
-.site-nav .list {
+ 
+.site-nav .site-item {
   margin-right: 50px;
 }
-.site-nav .list:last-child {
+.site-nav .site-item:last-child {
   margin-right: 0;
 }
 
-.site-nav .link {
-  display: inline-block;
+.site-nav .site-link {
+  display: block;
   padding-top: 32px;
   padding-bottom: 32px;
 
@@ -121,30 +124,31 @@ img {
   letter-spacing: 0.02em;
   text-decoration: none;
 }
-.list {
+
+.site-link {
   position: relative;
 }
 .current::after {
-content: "";
-position: absolute;
-width: 100%;
-height: 1px;
-bottom: -0px;
-background: #2196F3;
-border-radius: 2px;
-left: 0px;
 
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0px;
+  
+  background: #2196F3;
+  border-radius: 2px;
+  left: 0px;
 }
 
-.site-nav .link.current {
-  color: var(--accent-color);
-}
-.site-nav .link:hover,
-.site-nav .link:focus {
+.site-nav .site-link.current {
   color: var(--accent-color);
 }
 
-/* general style contact header*/
+
+
+
+ /* general style contact header*/
 
 .site-contact {
   display: flex;
@@ -154,13 +158,17 @@ left: 0px;
   padding: 0;
 }
 
-.site-contact .item {
+.site-contact .info {
   margin-right: 50px;
 }
 
-.site-contact .item:last-child {
+.site-contact .info:last-child {
   margin-right: 0;
   fill: blue;
+}
+
+.info {
+  display: block;
 }
 
 .site-contact .info {
@@ -278,16 +286,21 @@ left: 0px;
 }
 
 .skills-icon {
+  display: flex;
+  width: 270px;
+  height: 120px;
+
   background: #f5f4fa;
   border: 1px solid #f5f4fa;
   border: 1px soli;
   border-radius: 4px;
   text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .skill-icon {
-  margin-top: 25px;
-  margin-bottom: 25px;
+  display: flex;
 }
 
 .skills-title {
@@ -455,9 +468,8 @@ left: 0px;
 }
 
 .comp-link {
-  display: block;
-  width: 100%;
-  height: 100%;
+  width: 170px;
+  height: 92px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -619,7 +631,7 @@ left: 0px;
   border-radius: 4px;
 }
 
-.work-link {
+.work-list {
   margin: 0;
 
   display: flex;
@@ -627,7 +639,17 @@ left: 0px;
   gap: 30px;
 }
 
-.work-item:hover {
+.work-item {
+  background-color: var(--white-color);
+  width: 370px;
+  height: 405px;
+}
+
+.work-link {
+  display: block;
+}
+
+.work-link:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -639,11 +661,7 @@ left: 0px;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
 }
-.work-item {
-  background-color: var(--white-color);
-  width: 370px;
-  height: 405px;
-}
+
 .container-title {
   margin: 0px;
   margin-bottom: 4px;
