--- a/css/styles.css
+++ b/css/styles.css
@@ -94,25 +94,25 @@ img {
   color: var(--white-color);
 }
 
-/*----------------Nav-----------*/
+/*--------------NAV-----------*/
 
 .site-nav {
-  position: relative;
   display: flex;
   margin-left: 93px;
   margin-top: 0;
   margin-bottom: 0;
   padding: 0;
 }
- 
-.site-nav .site-item {
+
+ .site-item {
   margin-right: 50px;
 }
-.site-nav .site-item:last-child {
+ .site-item:last-child {
   margin-right: 0;
 }
 
-.site-nav .site-link {
+.site-link {
+  position: relative;
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -125,30 +125,27 @@ img {
   text-decoration: none;
 }
 
-.site-link {
-  position: relative;
-}
-.current::after {
-
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  bottom: 0px;
-  
-  background: #2196F3;
-  border-radius: 2px;
-  left: 0px;
-}
-
-.site-nav .site-link.current {
+.site-item .current {
   color: var(--accent-color);
 }
 
+.site-link:hover,
+.site-link:focus {
+  color: var(--accent-color);
+}
 
+.current::after {
+  content: "";
+  position: absolute;
 
+  width: 100%;
+  height: 2px;
+  bottom: -0px;
+  background-color: var(--accent-color);
+  left: 0;
+}
 
- /* general style contact header*/
+/* general style contact header*/
 
 .site-contact {
   display: flex;
@@ -158,11 +155,11 @@ img {
   padding: 0;
 }
 
-.site-contact .info {
+.site-contact .item {
   margin-right: 50px;
 }
 
-.site-contact .info:last-child {
+.site-contact .item:last-child {
   margin-right: 0;
   fill: blue;
 }
