--- a/css/styles.css
+++ b/css/styles.css
@@ -181,13 +181,13 @@ img {
   text-decoration: none;
 }
 
-.item-convert:hover .convert,
-.item-convert:focus .convert {
+.info:hover .convert,
+.info:focus .convert {
   fill: #2196f3;
 }
 
-.item-phone:hover .telefon,
-.item-phone:focus .telefon {
+.info:hover .telefon,
+.info:focus .telefon {
   fill: #2196f3;
 }
 
@@ -255,7 +255,8 @@ img {
   text-transform: uppercase;
 }
 
-.heroy-button {
+.heroy-btn {
+  display: inline-flex;
   padding: 10px 32px;
   border-radius: 4px;
   border: 1px solid transparent;
@@ -268,9 +269,16 @@ img {
   color: #ffffff;
   background: #2196f3;
   cursor: pointer;
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
-.button:hover,
-.button:active {
+
+
+.heroy-btn:hover,
+.heroy-btn:focus {
   background-color: var(--white-color);
   color: var(--accent-color);
   cursor: pointer;
@@ -355,7 +363,7 @@ img {
 
 .activ-description {
 position: absolute;
-width: 370px;
+width: 100%;
 height: 70px;
 bottom: 0;
 top: 224px;
@@ -671,12 +679,48 @@ background: rgba(47, 48, 58, 0.8);
 
 .work-link {
   display: block;
+  text-decoration: none;
 }
 
-.work-link:hover {
+.work-item:hover,
+.work-item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+
+/*----------ВІКНО-ВСПЛИВАЮЧЕ------------*/
+
+
+.work-item:hover .work-comment {
+  transform: translateY(0);
+}
+
+.work-image {
+  position: relative;
+  overflow: hidden;
+  
+} 
+
+.work-comment {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  margin: 0;
+  padding: 24px 63px;
+
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  background-color: rgba(33, 150, 243, 0.9);
+
+  transform: translateY(100%);
+  transition: transform 250ms linear;
+}
+
+
+
 
 .work-name {
   padding: 20px 24px;
@@ -721,6 +765,7 @@ background: rgba(47, 48, 58, 0.8);
 
   .backdrop.is.hidden {
     opacity: 0;
+    visibility: hidden;
     pointer-events: none;
   }
 
