--- a/css/styles.css
+++ b/css/styles.css
@@ -720,7 +720,7 @@ background: rgba(47, 48, 58, 0.8);
   background-color: rgba(33, 150, 243, 0.9);
 
   transform: translateY(100%);
-  transition: transform 250ms linear;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
