--- a/css/styles.css
+++ b/css/styles.css
@@ -468,6 +468,9 @@ background: rgba(47, 48, 58, 0.8);
   align-items: center;
   justify-content: center;
   fill: #afb1b8;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  color 550ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 .soc-link:hover,
@@ -509,6 +512,7 @@ background: rgba(47, 48, 58, 0.8);
   display: flex;
   align-items: center;
   justify-content: center;
+  
 }
 
 .comp-icon {
@@ -552,6 +556,8 @@ background: rgba(47, 48, 58, 0.8);
   letter-spacing: 0.03em;
   color: #ffffff;
   text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  
 }
 .site-address:hover,
 .site-address:focus {
@@ -572,6 +578,7 @@ background: rgba(47, 48, 58, 0.8);
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .info:hover,
@@ -614,6 +621,9 @@ background: rgba(47, 48, 58, 0.8);
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .footer-soc-icon {
   fill: #ffffff;
@@ -655,6 +665,9 @@ background: rgba(47, 48, 58, 0.8);
   color: #212121;
   background-color: #f5f4fa;
   border: hidden;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 .filter-list button:hover,
@@ -684,6 +697,7 @@ background: rgba(47, 48, 58, 0.8);
 .work-link {
   display: block;
   text-decoration: none;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .work-link:hover,
@@ -787,6 +801,26 @@ background: rgba(47, 48, 58, 0.8);
 
   .modal-btn {
     position: absolute;
+    width: 30px;
+    height: 30px;
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
     top: 8px;
     right: 8px;
+
   }
+
+  .footer-open {
+    fill: #000000;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
+  }
+
+  .modal-btn:hover .footer-open,  
+  .modal-btn:focus .footer-open {
+  fill: #2196f3;
+
+  }
+
