--- a/css/styles.css
+++ b/css/styles.css
@@ -502,8 +502,7 @@ background: rgba(47, 48, 58, 0.8);
 }
 
 .client-item {
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
+  
 }
 
 .comp-link {
@@ -512,12 +511,15 @@ background: rgba(47, 48, 58, 0.8);
   display: flex;
   align-items: center;
   justify-content: center;
-  
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
 }
 
 .comp-icon {
   fill: #afb1b8;
-}
+  transition:  fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+ }
 
 .comp-link:hover,
 .comp-link:focus {
@@ -814,13 +816,10 @@ background: rgba(47, 48, 58, 0.8);
   .footer-open {
     fill: #000000;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-
   }
 
   .modal-btn:hover .footer-open,  
   .modal-btn:focus .footer-open {
   fill: #2196f3;
-
   }
 
