--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,7 @@ img {
   line-height: 1.15;
   letter-spacing: 0.02em;
   text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-item .current {
@@ -499,10 +500,6 @@ background: rgba(47, 48, 58, 0.8);
   display: flex;
   gap: 30px;
   justify-content: space-between;
-}
-
-.client-item {
-  
 }
 
 .comp-link {
