--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ img {
 
 .page-header {
   display: flex;
-  
+
   height: 80px;
   margin-top: 0;
 
@@ -90,7 +90,13 @@ img {
   line-height: 1.2;
   letter-spacing: 0.03em;
   text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.logo:hover {
+  color: red;
+}
+
 .logo-start {
   color: var(--logo-color);
 }
@@ -108,10 +114,10 @@ img {
   padding: 0;
 }
 
- .site-item {
+.site-item {
   margin-right: 50px;
 }
- .site-item:last-child {
+.site-item:last-child {
   margin-right: 0;
 }
 
@@ -184,6 +190,7 @@ img {
   line-height: 1.15;
   letter-spacing: 0.02em;
   text-decoration: none;
+  transition: color 550ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .info:hover .convert,
@@ -278,9 +285,7 @@ img {
   transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
 }
-
 
 .heroy-btn:hover,
 .heroy-btn:focus {
@@ -367,18 +372,17 @@ img {
 }
 
 .activ-description {
-position: absolute;
-width: 100%;
-height: 70px;
-bottom: 0;
-top: 224px;
-padding-top: 27px;
-padding-bottom: 27px;
-background: rgba(47, 48, 58, 0.8);
-
+  position: absolute;
+  width: 100%;
+  height: 70px;
+  bottom: 0;
+  top: 224px;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  background: rgba(47, 48, 58, 0.8);
 }
 
-.activ-text{
+.activ-text {
   margin: 0;
   font-weight: 700;
   font-size: 14px;
@@ -386,7 +390,7 @@ background: rgba(47, 48, 58, 0.8);
   text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 /* ------style наша команда--------*/
 
@@ -469,9 +473,8 @@ background: rgba(47, 48, 58, 0.8);
   align-items: center;
   justify-content: center;
   fill: #afb1b8;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-  color 550ms cubic-bezier(0.4, 0, 0.2, 1);
-  
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 550ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .soc-link:hover,
@@ -510,13 +513,13 @@ background: rgba(47, 48, 58, 0.8);
   justify-content: center;
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .comp-icon {
   fill: #afb1b8;
-  transition:  fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
- }
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .comp-link:hover,
 .comp-link:focus {
@@ -555,8 +558,7 @@ background: rgba(47, 48, 58, 0.8);
   letter-spacing: 0.03em;
   color: #ffffff;
   text-decoration: none;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-  
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .site-address:hover,
 .site-address:focus {
@@ -621,8 +623,7 @@ background: rgba(47, 48, 58, 0.8);
   align-items: center;
   justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-soc-icon {
   fill: #ffffff;
@@ -665,8 +666,7 @@ background: rgba(47, 48, 58, 0.8);
   background-color: #f5f4fa;
   border: hidden;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-list button:hover,
@@ -707,7 +707,6 @@ background: rgba(47, 48, 58, 0.8);
 
 /*----------ВІКНО-ВСПЛИВАЮЧЕ------------*/
 
-
 .work-item:hover .work-comment {
   transform: translateY(0);
 }
@@ -715,8 +714,7 @@ background: rgba(47, 48, 58, 0.8);
 .work-image {
   position: relative;
   overflow: hidden;
-  
-} 
+}
 
 .work-comment {
   position: absolute;
@@ -735,9 +733,6 @@ background: rgba(47, 48, 58, 0.8);
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-
-
 
 .work-name {
   padding: 20px 24px;
@@ -778,45 +773,50 @@ background: rgba(47, 48, 58, 0.8);
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
-  }
+}
 
-  .backdrop.is-hidden {
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-  }
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
 
-  .modal {
+.modal {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   min-width: 528px;
   min-height: 521px;
-  background: #FFFFFF;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  }
+}
 
-  .modal-btn {
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    background: #FFFFFF;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-    top: 8px;
-    right: 8px;
+.modal-btn {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  top: 8px;
+  right: 8px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-  }
+.footer-open {
+  fill: #000000;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-  .footer-open {
-    fill: #000000;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+.modal-btn:hover,
+.modal-btn:focus {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
 
-  .modal-btn:hover .footer-open,  
-  .modal-btn:focus .footer-open {
+.modal-btn:hover .footer-open,
+.modal-btn:focus .footer-open {
   fill: #2196f3;
-  }
-
+}
