--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,7 @@ img {
   position: absolute;
 
   width: 100%;
-  height: 2px;
+  height: 4px;
   bottom: -0px;
   background-color: var(--accent-color);
   left: 0;
@@ -160,27 +160,30 @@ img {
 
 .site-contact {
   display: flex;
+  align-items: center;
+  
   margin-left: auto;
   margin-top: 0;
   margin-bottom: 0;
   padding: 0;
 }
 
-.site-contact .item {
+.site-contact .item-convert {
   margin-right: 50px;
 }
 
-.site-contact .item:last-child {
+.site-contact .item-convert:last-child {
   margin-right: 0;
   fill: blue;
 }
 
 .info {
-  display: block;
+  display: flex;
+  align-items: center;
 }
 
-.site-contact .info {
-  display: inline-block;
+ .site-contact .info {
+
   padding-top: 32px;
   padding-bottom: 32px;
 
@@ -190,22 +193,12 @@ img {
   line-height: 1.15;
   letter-spacing: 0.02em;
   text-decoration: none;
-  transition: color 550ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.info:hover .convert,
-.info:focus .convert {
-  fill: #2196f3;
-}
-
-.info:hover .telefon,
-.info:focus .telefon {
-  fill: #2196f3;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .item-convert::before {
   content: "";
-}
+}   
 
 .convert {
   display: inline-block;
@@ -213,6 +206,12 @@ img {
   height: 12px;
   margin-right: 10px;
   fill: #757575;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.info:hover .convert,
+.info:focus .convert {
+  fill: #2196f3;
 }
 
 .item.phone::before {
@@ -226,6 +225,13 @@ img {
   height: 16px;
   margin-right: 10px;
   fill: #757575;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.info:hover .telefon,
+.info:focus .telefon {
+  fill: #2196f3;
+
 }
 
 /* style index.html*/
@@ -667,6 +673,7 @@ img {
   border: hidden;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 .filter-list button:hover,
