--- a/css/styles.css
+++ b/css/styles.css
@@ -483,6 +483,9 @@ img {
     color 550ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.card-soc-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .soc-link:hover,
 .soc-link:focus {
   background-color: #2196f3;
@@ -672,7 +675,7 @@ img {
   background-color: #f5f4fa;
   border: hidden;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
